# ugcore

./: .gitignore  .gitlab-ci.yml  .project  .travis.yml  CMakeLists.txt  CMakeLists_NewProposal.txt  Dockerfile  Doxyfile  LICENSE  ParallelToolchain_MPICH.txt  ParallelToolchain_MPT.txt  ParallelToolchain_OMPI.txt  README.md  README.txt  README_hlibpro.txt  appveyor.yml  azure-pipelines.yml  changelog.txt  compiledstrings.sh  doxy_config_libalgebra.txt  doxy_config_libdisc.txt  doxy_config_libgrid.txt  doxy_config_lua.txt  doxy_config_scripting.txt  doxy_config_ug4.txt  doxy_config_ug4_new.txt  doxy_config_ug4_new_docu_only.txt  doxy_config_ug4_old.txt  test.txt  toolchain_file_hermit.cmake  toolchain_file_hermit_gcc.cmake  toolchain_file_jugene.cmake  toolchain_file_juqueen.cmake  ug4.bib  ug_cmake_includes.txt  ug_cmake_includes_new.txt  ug_cmake_includes_old.txt  ug_plugin_cmake_includes.txt
docs/: CMakeLists.txt  Layout.xml  Layout_apps.xml  Layout_plugins.xml  Layout_regdocu.xml  doxy_config_additional.txt  doxy_config_amalgamated.txt  doxy_config_apps.txt  doxy_config_docu_only.txt  doxy_config_libalgebra.txt  doxy_config_libdisc.txt  doxy_config_libgrid.txt  doxy_config_no_ugbase.txt  doxy_config_plugins.txt  doxy_config_regdocu.txt  doxy_config_scripting.txt  doxy_config_ug4.txt  doxy_config_ug4_mathjax.txt  doxy_config_ugbase_tags.txt  extra_stylesheet.css  generate_amalgamated_docu.sh  lua2doxygen
grid_unit_tests/: CMakeLists.txt
grid_unit_tests/src/: main.cpp
ugbase/: #ug.cpp#  CMakeLists.txt  boost_undo.md  compiledstrings.h  ug.cpp  ug.h  ugbase.h
ugbase/bindings_vrl/: CMakeLists.txt  bindings_vrl.cpp  bindings_vrl.h  bindings_vrl_native.h  canvas.cpp  canvas.h  compiledate.h  invocation.cpp  invocation.h  messaging.cpp  messaging.h  playground.cpp  playground.h  svnrevision.h  threading.h  type_converter.cpp  type_converter.h  user_data.cpp  user_data.h  vrl_user_number.cpp  vrl_user_number.h
ugbase/bridge/: CMakeLists.txt  bridge.cpp  bridge.h  domain_bridge.cpp  lib_grid_bridge.cpp  misc_bridge.cpp  pcl_bridge.cpp  profiler_bridge.cpp  refinement_bridge.cpp  standard_bridges.h  suffix_tag.h  test_bridge.cpp  util.h  util_algebra_dependent.h  util_bridge.cpp  util_domain_algebra_dependent.h  util_domain_dependent.h  util_overloaded.h  vec_math_bridge.cpp
ugbase/common/: CMakeLists.txt  assert.cpp  assert.h  authors.h  boost_serialization.h  boost_serialization_routines.h  catch_std.h  code_marker.h  common.cpp  common.h  compat.hpp  config.hpp  contract.h  cuthill_mckee.cpp  cuthill_mckee.h  debug_id.cpp  debug_id.h  debug_print.h  error.cpp  error.h  log.cpp  log.h  log_impl.h  metaprogramming_util.h  progress.cpp  progress.h  serialization.cpp  serialization.h  smart_pointer.h  static_assert.h  stopwatch.h  string_util.cpp  string_util.h  symbol_import_export.h  types.h  ug_config.h
ugbase/compile_info/: CMakeLists.txt  compile_info.cpp  compile_info.h
ugbase/concepts/: compatibility.hpp  vector_storage_type.hpp
ugbase/lib_algebra/: CMakeLists.txt  algebra_chooser.h  algebra_selector.h  algebra_template_define_helper.h  algebra_type.cpp  algebra_type.h  algebra_types.h  cpu_algebra_types.h  debug_ids.cpp  dof_flag_manager.h  lib_algebra.h  lib_algebra_impl.h
ugbase/lib_disc/: CMakeLists.txt  assemble_interface.h  domain.cpp  domain.h  domain_impl.h  domain_traits.h  domain_util.cpp  domain_util.h  domain_util_impl.h  eqn_disc.h  lib_disc.h
ugbase/lib_discretization/: CMakeLists.txt  assemble.h  assemble_interface.h  differentialoperator.cpp  differentialoperator.h  dirichletbndcond.h  discretizationscheme.cpp  discretizationscheme.h  discretizationscheme_impl.h  dofhandler.cpp  dofhandler.h  dofpattern.cpp  dofpattern.h  dofpattern_impl.h  domain.h  domain_util.h  domain_util_general_impl.h  domain_util_impl.h  domain_util_impl.hpp  domain_util_parallel_impl.hpp  elementdata_impl.h  equation.cpp  equation.h  equation_impl.h  lib_discretization.h  newton.cpp  newton.h  numericalsolution.cpp  numericalsolution.h  numericalsolution_impl.h  referenceelement.h  rhs.cpp  rhs.h  rhs_impl.h  spacialdiscretization.cpp  spacialdiscretization.h  subsetdiscretization.cpp  subsetdiscretization.h  systemdiscretization.cpp  systemdiscretization.h  (+6 more)
ugbase/lib_grid/: CMakeLists.txt  boost_class_serialization_exports.h  changelog.txt  common_attachments.cpp  common_attachments.h  common_attachments_impl.hpp  copy_attachment_handler.h  geometric_objects.cpp  geometric_objects.h  global_attachments.h  grid_debug.cpp  grid_debug.h  lg_base.h  lib_grid.h  lib_grid_messages.cpp  lib_grid_messages.h  multi_grid.cpp  multi_grid.h  multi_grid_child_info.h  multi_grid_impl.hpp  selection_policies.cpp  selection_policies.h  selection_policies_impl.hpp  selector.cpp  selector.h  selector_impl.hpp  subset_handler.cpp  subset_handler.h  subset_handler_grid.cpp  subset_handler_grid.h  subset_handler_grid_impl.hpp  subset_handler_impl.hpp  subset_handler_interface.cpp  subset_handler_interface.h  subset_handler_interface_impl.hpp  subset_handler_multi_grid.cpp  subset_handler_multi_grid.h
ugbase/lib_ug_script/: CMakeLists.txt  lib_disc_script.cpp  lib_grid_script.cpp
ugbase/node_tree/: CMakeLists.txt  collision_edges_node.cpp  collision_edges_node.h  collision_element_info.h  collision_tree_root_node.h  collision_triangles_node.cpp  collision_triangles_node.h  group_node.cpp  group_node.h  node.h  node_tree.h  octree.cpp  octree.h  traverser.cpp  traverser.h
ugbase/pcl/: CMakeLists.txt  cl_base.h  parallel_archive.cpp  parallel_archive.h  parallel_file.cpp  parallel_file.h  parallel_node_layout.h  pcl.h  pcl_base.cpp  pcl_base.h  pcl_comm.cpp  pcl_comm.h  pcl_comm_world.cpp  pcl_comm_world.h  pcl_communication.h  pcl_communication_impl.hpp  pcl_communication_structs.h  pcl_communicator.h  pcl_communicator_impl.hpp  pcl_datatype.h  pcl_debug.h  pcl_distributed_domain_info.h  pcl_domain_decomposition.h  pcl_errhandler.cpp  pcl_errhandler.h  pcl_impl.hpp  pcl_interface_communicator.h  pcl_interface_communicator_impl.hpp  pcl_layout_tests.h  pcl_layout_util.h  pcl_methods.cpp  (+18 more)
(+3691 files in other folders)
